// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should render 1`] = `
<div>
  <div
    class="crayons-dropdown"
  >
    Hey, I'm a dropdown content! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ea voluptates quaerat eos consequuntur temporibus.
  </div>
</div>
`;

exports[`<Dropdown /> should render with additional CSS classes 1`] = `
<div>
  <div
    class="crayons-dropdown some-additional-css-class"
  >
    Hey, I'm a dropdown content! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ea voluptates quaerat eos consequuntur temporibus.
  </div>
</div>
`;
